Colocando validação e controller

--- a/portal_noticias_html_e_assets/noticias.html
+++ b/portal_noticias_html_e_assets/noticias.html
@@ -44,19 +44,34 @@
 
 	    <div class="container">
 	    	<div class="row">
-	    		<div class="col-md-8">
+	    		<div class="col-md-12">
 	    			<div class="noticia_wrapper">
 		    			<span class="noticia_autor">Por Jorge</span>
 		    			<a href="noticia.html" class="noticia_titulo">Título da notícia</a>
 		    			<span class="noticia_data">07/09/2016</span>
 		    			<br />
 		    			<p class="noticia_resumo">
-		    				Aqui fica o resumo da notícia principal da página com um limite de 100 caracteres!
+		    				Aqui fica o resumo da notícia com um limite de 100 caracteres!
 		    			</p>
 		    		</div>
 		    	</div>
+			</div>
+			<div class="row">
+	    		<div class="col-md-12">
+	    			<div class="noticia_wrapper">
+		    			<span class="noticia_autor">Por Jorge</span>
+		    			<a href="noticia.html" class="noticia_titulo">Título da notícia</a>
+		    			<span class="noticia_data">07/09/2016</span>
 
-	    		<div class="col-md-4">
+		    			<br />
+		    			<p class="noticia_resumo">
+		    				Aqui fica o resumo da notícia com um limite de 100 caracteres!
+		    			</p>
+		    		</div>
+		    	</div>
+			</div>
+			<div class="row">
+	    		<div class="col-md-12">
 	    			<div class="noticia_wrapper">
 		    			<span class="noticia_autor">Por Jorge</span>
 		    			<a href="noticia.html" class="noticia_titulo">Título da notícia</a>
@@ -71,7 +86,7 @@
 	    	</div>
 
 	    	<div class="row">
-	    		<div class="col-md-4">
+	    		<div class="col-md-12">
 	    			<div class="noticia_wrapper">
 		    			<span class="noticia_autor">Por Jorge</span>
 		    			<a href="noticia.html" class="noticia_titulo">Título da notícia</a>
@@ -82,8 +97,9 @@
 		    			</p>
 		    		</div>
 		    	</div>
-
-	    		<div class="col-md-4">
+			</div>
+			<div class="row">
+	    		<div class="col-md-12">
 	    			<div class="noticia_wrapper">
 		    			<span class="noticia_autor">Por Jorge</span>
 		    			<a href="noticia.html" class="noticia_titulo">Título da notícia</a>
@@ -95,8 +111,9 @@
 		    			</p>
 		    		</div>
 		    	</div>
-
-	    		<div class="col-md-4">
+			</div>
+			<div class="row">
+	    		<div class="col-md-12">
 	    			<div class="noticia_wrapper">
 		    			<span class="noticia_autor">Por Jorge</span>
 		    			<a href="noticia.html" class="noticia_titulo">Título da notícia</a>
@@ -109,11 +126,7 @@
 		    		</div>
 		    	</div>
 	    	</div>
-
-	    	<div class="row ver_mais">
-	    		<button type="button" class="btn btn-default"><a href="noticias.html">Ver todas as notícias</a></button>
-	    	</div>
-
+			
 	    </div>
 	
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
